--- a/.tx/config
+++ b/.tx/config
@@ -13,6 +13,12 @@ source_lang = en
 source_file = mayan/apps/appearance/locale/en/LC_MESSAGES/django.po
 type = PO
 
+[mayan-edms.autoadmin-2-0]
+file_filter = mayan/apps/autoadmin/locale/<lang>/LC_MESSAGES/django.po
+source_lang = en
+source_file = mayan/apps/autoadmin/locale/en/LC_MESSAGES/django.po
+type = PO
+
 [mayan-edms.authentication-2-0]
 file_filter = mayan/apps/authentication/locale/<lang>/LC_MESSAGES/django.po
 source_lang = en
