--- a/.tx/config
+++ b/.tx/config
@@ -13,16 +13,16 @@ source_lang = en
 source_file = mayan/apps/appearance/locale/en/LC_MESSAGES/django.po
 type = PO
 
-[mayan-edms.autoadmin-2-0]
-file_filter = mayan/apps/autoadmin/locale/<lang>/LC_MESSAGES/django.po
-source_lang = en
-source_file = mayan/apps/autoadmin/locale/en/LC_MESSAGES/django.po
-type = PO
-
 [mayan-edms.authentication-2-0]
 file_filter = mayan/apps/authentication/locale/<lang>/LC_MESSAGES/django.po
 source_lang = en
 source_file = mayan/apps/authentication/locale/en/LC_MESSAGES/django.po
+type = PO
+
+[mayan-edms.autoadmin-2-0]
+file_filter = mayan/apps/autoadmin/locale/<lang>/LC_MESSAGES/django.po
+source_lang = en
+source_file = mayan/apps/autoadmin/locale/en/LC_MESSAGES/django.po
 type = PO
 
 [mayan-edms.cabinets-2-0]
@@ -101,6 +101,12 @@ type = PO
 file_filter = mayan/apps/events/locale/<lang>/LC_MESSAGES/django.po
 source_lang = en
 source_file = mayan/apps/events/locale/en/LC_MESSAGES/django.po
+type = PO
+
+[mayan-edms.file_caching-2-0]
+file_filter = mayan/apps/file_caching/locale/<lang>/LC_MESSAGES/django.po
+source_lang = en
+source_file = mayan/apps/file_caching/locale/en/LC_MESSAGES/django.po
 type = PO
 
 [mayan-edms.linking-2-0]
